make sone changes

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
 	<section class="header-bg">
 		<header>
+		<h1>Hello nigger</h1>
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-5 col-md-3 logo">
